# sdlc-plugins

./: .gitignore  .skillsaw.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONVENTIONS.md  README.md  fullsend.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  feature-request.md  feature-request.yml
.github/workflows/: build-sandbox-image.yml  (+6 more)
docs/: agentskills-io-suggestions.md  constraints.md  conventions-spec.md  metrics.md  performance-skills-reference.md  performance-workflow-guide.md  project-config-contract.md  tools.md  workflow.md
evals/performance-analyze-module/files/mock-backend-migration/: Cargo.toml
evals/performance-analyze-module/files/mock-backend-migration/migration/: m000_functions.sql  m001_backfill.sql  m002_normalize.sql
evals/performance-analyze-module/files/mock-backend-migration/performance/: config-backend-only.json
evals/performance-analyze-module/files/mock-backend-migration/performance/baselines/: benchmark-results.json
evals/performance-analyze-module/files/mock-backend-migration/src/: lib.rs
evals/performance-analyze-module/files/mock-backend-migration/src/handlers/: mod.rs
evals/performance-plan-optimization/files/mock-backend/: Cargo.toml
evals/performance-plan-optimization/files/mock-backend/migration/src/: m20260101_000001_create_advisories.rs
evals/performance-plan-optimization/files/mock-backend/src/handlers/: advisories.rs  packages.rs
evals/performance-setup/files/mock-backend-only/: Cargo.toml
scripts/: sha256-digest.py
(+11288 files in other folders)
