# SYNTHETIC TEST DATA — Minimal Cargo.toml for eval
[package]
name = "mock-migration-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
sea-orm-migration = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
