# SYNTHETIC TEST DATA — DO NOT USE IN PRODUCTION
[package]
name = "package-listing-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
