# SYNTHETIC TEST DATA — standalone Rust backend for eval testing (backend-only architecture)
[package]
name = "backend-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sea-orm = { version = "0.12", features = ["sqlx-postgres"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
